// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`골든 산출물 스냅샷 > airgap 프로필 전체 산출 스냅샷 1`] = `
{
  ".env.example": "# 자동 생성된 환경변수 목록 — 실제 값으로 채운다
PORT=3000
# 테스트/오프라인: true 면 LLM 호출 없이 스텁 응답 사용
LLM_STUB=false
LLM_BASE_URL=http://localhost:8000/v1
LLM_MODEL=exaone-3.5
DATABASE_URL=
QDRANT_URL=http://localhost:6333
EMBEDDING_MODEL=bge-m3
# 온프레미스 임베딩은 API 가 아니라 추론 서버가 필요하다 (ARCHITECTURE.md)
EMBEDDING_API_URL=http://localhost:8080/embed
",
  ".gitignore": "node_modules/
dist/
.env
*.log
",
  "ARCHITECTURE.md": "# 아키텍처 (ARCHITECTURE.md)

## 전체 구성

- **프론트엔드**: React (독립 페이지)
- **백엔드**: Node.js / 인증 세션 / 네트워크 완전 오프라인
- **배포**: Kubernetes (폐쇄망(완전 분리))
- **데이터**: RDB PostgreSQL / 파일 로컬 파일시스템

## RAG 파이프라인

\`\`\`
[지식 소스: HWP(한글) 업로드, DOCX 업로드]
   │ 적재 (OCR 아니오 / 표 아니오)
   ▼
[청킹: 문단 단위]
   ▼
[임베딩: bge-m3] ──▶ [Vector DB: Qdrant]
   ▼
[검색: 하이브리드(BM25+벡터) + 리랭커 bge-reranker]
   ▼
[LLM: EXAONE 3.5 (LG·국산)] ──▶ 답변 (+출처 표기)
\`\`\`

> 임베딩 \`bge-m3\`은 클라우드 API가 아니라 **추론 서버**가 필요하다. 별도 컨테이너/서버로 띄우고 \`EMBEDDING_API_URL\`로 연결한다. 폐쇄망에서는 오프라인 설치 패키지에 모델 가중치를 포함한다.


## 보안 · 컴플라이언스

- 데이터 국내 보관: 예
- 망분리 준수: 예
- 감사 로그: 예
- 접근성: KWCAG 2.2 AAA

## 운영

- 멀티턴 세션: 예
- 관리자 대시보드: 아니오
",
  "CLAUDE.md": "# CLAUDE.md — 내부 규정봇 작업 지침

> 이 파일은 **이 챗봇 프로젝트에서 작업하는 Claude Code를 위한 지침**이다.
> 구현 착수 지시는 \`PROMPT.md\`, 전체 설정 정본은 \`agent-spec.json\`을 본다.

## 1. 프로젝트 개요

- 기관: OO부 / 챗봇: 내부 규정봇
- 용도: 내부 업무 지원, 정책/제도 안내
- 배포 환경: 폐쇄망(완전 분리)

## 2. 절대 규칙 (공공기관)

- **배포 환경**: 폐쇄망(완전 분리)
  - ⚠️ 외부 인터넷 호출 불가 — 모든 모델/임베딩/의존성은 온프레미스 또는 사내망으로 해결한다.
- **웹 접근성**: KWCAG 2.2 AAA 준수 (KWCAG 2.2)
- **개인정보**: 수집 아니오, 마스킹 예
- **데이터 국내 보관**: 예
- **조달**: 국산/오픈소스 우선

## 3. 스택

- 프론트엔드: React / 임베드: 독립 페이지
- 백엔드: Node.js / 인증: 세션 / 배포: Kubernetes
- DB: PostgreSQL / 파일저장소: 로컬 파일시스템
- LLM: 오픈소스/온프레미스 · EXAONE 3.5 (LG·국산) · 사내 추론 서버(vLLM/Ollama/TGI)
- RAG: Qdrant + 임베딩 bge-m3 + 검색 하이브리드(BM25+벡터)

## 4. 작업 원칙

- \`agent-spec.json\`이 단일 진실. 설정과 코드가 어긋나면 spec을 따른다.
- 답변은 간결 톤. 근거 없는 내용은 답하지 않는다(환각 억제). 답변에 출처/페이지를 표기한다.
- 모르는 질문은 "정중히 한계 안내"로 처리한다.
- 모든 사용자 대면 텍스트는 한국어, 접근성(KWCAG 2.2 AAA)을 지킨다.

## 5. 검증

- 빌드/기동(\`/health\`) 후 \`tests/\`의 평가 골든셋을 돌려 통과를 확인한다.
",
  "DESIGN.md": "# 디자인 시스템 (DESIGN.md)

> "내부 규정봇"의 시각 결정을 텍스트로 고정한 문서. UI 구현은 이 토큰을 따른다.
> 색은 **직접 hex가 아니라 CSS 변수**로 사용한다.

## 테마

- **프리셋**: 중립 그레이
- **모드**: 라이트
- **레이아웃**: 전체 페이지형

## 컬러 토큰

| 토큰 | 값 | 용도 |
|---|---|---|
| \`--color-primary\` | \`#1F4E8C\` | 주요 액션·강조 |
| \`--color-secondary\` | \`#3A6EA5\` | 보조 |
| \`--color-accent\` | \`#1B998B\` | 포인트 |
| \`--color-background\` | \`#FFFFFF\` | 배경 |
| \`--color-surface\` | \`#F5F7FA\` | 카드/말풍선 표면 |
| \`--color-text\` | \`#1A1A1A\` | 본문 텍스트 |
| \`--color-muted\` | \`#6B7280\` | 보조 텍스트 |
| \`--color-border\` | \`#E5E7EB\` | 경계선 |

## 폰트

- **제목**: Pretendard (\`--font-heading\`)
- **본문**: Pretendard (\`--font-body\`)

## 챗 위젯 스타일

- 말풍선 모서리: rounded (\`--bubble-radius\`)
- 아바타 표시: 예
- 봇 말풍선 정렬: left
- 입력창 형태: box
- 밀도: comfortable

## CSS 변수 (그대로 복사해 사용)

\`\`\`css
:root {
  --color-primary: #1F4E8C;
  --color-secondary: #3A6EA5;
  --color-accent: #1B998B;
  --color-background: #FFFFFF;
  --color-surface: #F5F7FA;
  --color-text: #1A1A1A;
  --color-muted: #6B7280;
  --color-border: #E5E7EB;
  --font-heading: 'Pretendard', system-ui, sans-serif;
  --font-body: 'Pretendard', system-ui, sans-serif;
  --bubble-radius: 12px;
}
\`\`\`

## 접근성 (KWCAG 2.2)

- 목표 등급: KWCAG 2.2 AAA
- 텍스트/배경 대비, 키보드 내비게이션, \`aria-*\` 라벨, 포커스 표시를 기본값으로 한다.
",
  "Dockerfile": "FROM node:22-slim
WORKDIR /app
COPY package.json ./
RUN npm install
COPY . .
RUN npm run build
EXPOSE 3000
CMD ["npm", "start"]
",
  "PROMPT.md": "# 구현 지시 (Claude Code 마스터 프롬프트)

> 이 파일은 **Claude Code에게 주는 첫 지시**다. 이 폴더를 열고 아래를 순서대로 수행해
> **OO부**의 챗봇 **"내부 규정봇"**을 완성하라.

## 0. 가장 먼저 — 공공기관 제약 (위반 금지)

- **배포 환경**: 폐쇄망(완전 분리)
  - ⚠️ 외부 인터넷 호출 불가 — 모든 모델/임베딩/의존성은 온프레미스 또는 사내망으로 해결한다.
- **웹 접근성**: KWCAG 2.2 AAA 준수 (KWCAG 2.2)
- **개인정보**: 수집 아니오, 마스킹 예
- **데이터 국내 보관**: 예
- **조달**: 국산/오픈소스 우선

> 위 제약과 충돌하는 구현은 하지 않는다. 충돌이 보이면 멈추고 \`agent-spec.json\`을 기준으로 재확인한다.

## 1. 무엇을 만드는가

- **기관/부서**: OO부 / 정보화담당관
- **챗봇 명칭**: 내부 규정봇
- **용도**: 내부 업무 지원, 정책/제도 안내
- **대상 사용자**: 공무원
- **운영 언어**: 한국어
- **스택**: React (프론트) / Node.js (백엔드) / RAG: Qdrant + bge-m3 / LLM: EXAONE 3.5 (LG·국산)

## 2. 구현 순서 (이 순서를 지킨다 — 각 단계 끝에서 검증)

1. **프로젝트 골격 확인**: 이 폴더의 \`agent-spec.json\`(정본), \`DESIGN.md\`, \`ARCHITECTURE.md\`, \`CLAUDE.md\`를 먼저 읽는다. 모든 결정은 \`agent-spec.json\`을 따른다.
2. **의존성 설치 & 기동 검증**: 동봉된 매니페스트로 의존성을 설치하고, 진입점(\`/health\`)이 떠서 200을 반환하는지 확인한다. 여기서 빌드/기동이 깨지면 먼저 고친다. **테스트/오프라인 환경에서는 \`LLM_STUB=true\`로 실제 LLM 호출 없이 플러밍을 검증**하고, 실제 키(예: \`ANTHROPIC_API_KEY\`)는 \`.env\`에 둔다.
3. **디자인 토큰 적용**: \`DESIGN.md\`의 컬러/폰트/위젯 토큰을 UI에 반영한다. 색은 직접 hex가 아니라 CSS 변수로 쓴다. 레이아웃은 "전체 페이지형".
4. **RAG 파이프라인 구현**: 적재→청킹(문단 단위)→임베딩(bge-m3)→Qdrant 적재→검색(하이브리드(BM25+벡터)). 답변에는 출처/페이지를 반드시 표기한다. RAG 골격 stub(\`src/rag/pipeline.ts\`)의 함수 시그니처를 채운다. \`search()\`가 빈 결과를 그대로 반환하지 않도록 한다. HWP(한글)는 표준 Node 파서가 없으므로 변환 전략(libreoffice 변환 또는 hwp.js 등)을 먼저 정해 적재 단계에 반영한다. 임베딩 \`bge-m3\`은 API가 아니라 별도 추론 서버가 필요하다 — \`EMBEDDING_API_URL\` 엔드포인트로 연결한다(ARCHITECTURE 참조).
5. **LLM 연동**: 오픈소스/온프레미스 / 모델 EXAONE 3.5 (LG·국산) / 호출 방식 사내 추론 서버(vLLM/Ollama/TGI). 시스템 프롬프트는 간결 톤. 가드레일: 근거기반 예, 민감정보 필터 예.
6. **대화 설계 반영**: 페르소나/인텐트/빠른응답/폴백(정중히 한계 안내)을 구현한다. 인텐트가 비어 있으면 \`agent-spec.json\`의 \`conversation\`을 보고 대표 시나리오를 먼저 정의한다.
7. **상호작용/동작 방식 구현**: 동작 방식은 RAG 인용형(검색→근거 기반 답변+출처). 응답 스트리밍(속도 normal, 인디케이터 dots), 렌더링: 마크다운 예·인용 "chips". 출력 형식: 길이 "balanced"·구조 "none". 대화 컨트롤: copy, feedback (피드백 thumbs).
8. **에이전트 능력/안전 구현**: 안전 — 거절 스타일 "polite". (§7 가드레일과 함께 적용)
9. **평가 골든셋 검증**: 동봉된 테스트 골격(\`tests/\`)을 실행해 \`evaluation\` 골든셋을 통과시킨다. 통과 못 하면 RAG/프롬프트를 조정한다.
10. **컴플라이언스 점검**: 접근성(KWCAG 2.2 AAA), 개인정보 마스킹(아니오), 감사 로그(예)를 최종 확인한다. 동봉된 감사 로그 미들웨어·마스킹 유틸 stub을 실제 정책에 맞게 채운다.

## 3. 완료 기준 (acceptance)

- [ ] 빌드 및 서버 기동 성공 (\`/health\` 200)
- [ ] 디자인 토큰(컬러/폰트/위젯/레이아웃)이 UI에 반영됨
- [ ] RAG 검색이 동작하고 답변에 출처가 표기됨
- [ ] \`evaluation\` 골든셋 테스트 통과
- [ ] 접근성 KWCAG 2.2 AAA / 개인정보·감사 로그 요건 충족

## 4. 원칙

- **\`agent-spec.json\`이 정본**이다. 모호하면 거기서 답을 찾는다. 그래도 없으면 보수적으로(공공기관 안전) 결정한다.
- 선택되지 않은 기능은 임의로 추가하지 않는다(범위 고정 → 결정적 산출).
- 한국어 사용자 기준으로 카피·오류 메시지·접근성 라벨을 작성한다.
",
  "README.md": "# 내부 규정봇

OO부 정보화담당관 챗봇 프로젝트.

> 이 폴더는 **agent-maker**가 생성한 산출물이다. Claude Code로 구현을 시작하려면
> 먼저 \`PROMPT.md\`를 읽게 하라.

## 무엇인가

- 용도: 내부 업무 지원, 정책/제도 안내
- 대상: 공무원
- 배포 환경: 폐쇄망(완전 분리)

## 구현 시작

1. 이 폴더에서 Claude Code를 연다.
2. \`PROMPT.md\`의 지시를 따른다. (정본 설정: \`agent-spec.json\`)
3. 빌드/기동 후 \`tests/\`의 평가 골든셋을 통과시킨다.

## 포함 파일

- \`PROMPT.md\` — Claude Code 구현 지시
- \`DESIGN.md\` — 디자인 시스템(토큰)
- \`ARCHITECTURE.md\` — 아키텍처
- \`CLAUDE.md\` — 이 프로젝트 작업 지침
- \`agent-spec.json\` — 전체 설정(정본)
- 스캐폴딩 코드(\`src/\`, 매니페스트, \`tests/\` 등)
",
  "agent-spec.json": "{
  "meta": {
    "specVersion": "1.0",
    "generatorVersion": "0.1.0",
    "createdAt": "2026-06-20T00:00:00.000Z"
  },
  "project": {
    "org": "OO부",
    "dept": "정보화담당관",
    "name": "내부 규정봇",
    "purpose": [
      "internal-support",
      "policy-info"
    ],
    "audience": [
      "public-official"
    ],
    "languages": [
      "ko"
    ],
    "deployEnv": "on-premise-airgap"
  },
  "design": {
    "theme": "gov-gray",
    "colors": {
      "primary": "#1F4E8C",
      "secondary": "#3A6EA5",
      "accent": "#1B998B",
      "background": "#FFFFFF",
      "surface": "#F5F7FA",
      "text": "#1A1A1A",
      "muted": "#6B7280",
      "border": "#E5E7EB"
    },
    "mode": "light",
    "fonts": {
      "heading": "pretendard",
      "body": "pretendard"
    },
    "widgetStyle": {
      "bubbleRadius": "rounded",
      "avatar": true,
      "align": "left",
      "inputStyle": "box",
      "density": "comfortable"
    },
    "layout": "full-page"
  },
  "frontend": {
    "framework": "react",
    "embed": "standalone-page",
    "responsive": true,
    "a11yLevel": "kwcag-aaa"
  },
  "backend": {
    "runtime": "node",
    "auth": "session",
    "deploy": "kubernetes",
    "network": "offline",
    "logging": {
      "audit": true
    }
  },
  "database": {
    "rdb": "postgres",
    "history": "same-as-rdb",
    "fileStore": "local"
  },
  "rag": {
    "enabled": true,
    "sources": [
      "upload-hwp",
      "upload-docx"
    ],
    "ingest": {
      "ocr": false,
      "tables": false,
      "images": false
    },
    "chunking": {
      "strategy": "paragraph"
    },
    "embedding": "bge-m3",
    "vectorDb": "qdrant",
    "retrieval": {
      "strategy": "hybrid",
      "reranker": "bge-reranker"
    },
    "citations": true
  },
  "llm": {
    "provider": "opensource",
    "model": "exaone-3.5",
    "serving": "self-hosted",
    "params": {
      "temperature": 0.3,
      "maxTokens": 2048
    },
    "guardrails": {
      "groundedOnly": true,
      "piiFilter": true
    },
    "session": {
      "multiTurn": true
    }
  },
  "conversation": {
    "persona": {
      "tone": "concise"
    },
    "intents": [
      {
        "name": "복무 규정 조회"
      }
    ],
    "fallback": {
      "onUnknown": "apologize"
    }
  },
  "interaction": {
    "agentMode": "rag-cited",
    "toolPolicy": "none",
    "streaming": {
      "enabled": true,
      "speed": "normal",
      "indicator": "dots"
    },
    "rendering": {
      "markdown": true,
      "codeBlocks": true,
      "citationStyle": "chips",
      "toolCallDisplay": "collapsed",
      "showContextMeter": false
    },
    "output": {
      "length": "balanced",
      "structured": "none"
    },
    "welcome": {
      "showSuggestions": true
    },
    "controls": [
      "copy",
      "feedback"
    ],
    "feedback": "thumbs",
    "multimodal": []
  },
  "agent": {
    "askUser": false,
    "subAgents": {
      "enabled": false
    },
    "builtinTools": [],
    "memory": {
      "longTerm": false
    },
    "context": {
      "autoCompact": false,
      "strategy": "none"
    },
    "safety": {
      "refusalStyle": "polite",
      "abuseFilter": false
    }
  },
  "integrations": {
    "apis": [],
    "tools": [],
    "webhooks": []
  },
  "evaluation": {
    "testset": [],
    "metrics": []
  },
  "compliance": {
    "privacy": {
      "collectsPii": false,
      "masking": true
    },
    "security": {
      "dataResidencyKR": true,
      "networkSeparation": true
    },
    "a11y": "kwcag-aa",
    "procurement": {
      "domesticPreferred": true,
      "offlineInstaller": true
    }
  },
  "ops": {
    "audit": true
  }
}
",
  "package.json": "{
  "name": "gov-chatbot",
  "version": "0.1.0",
  "private": true,
  "type": "module",
  "scripts": {
    "dev": "tsx watch src/server.ts",
    "build": "tsc",
    "start": "node dist/server.js",
    "test": "vitest run"
  },
  "dependencies": {
    "express": "^4.21.2"
  },
  "devDependencies": {
    "typescript": "^5.7.3",
    "tsx": "^4.19.2",
    "vitest": "^2.1.8",
    "@types/express": "^4.17.21",
    "@types/node": "^22.10.5"
  }
}
",
  "public/app.js": "// 최소 채팅 UI — /api/chat 호출. (PROMPT.md 지시로 디자인/접근성을 다듬는다)
const form = document.getElementById("form");
const log = document.getElementById("log");
const input = document.getElementById("msg");

function add(role, text) {
  const el = document.createElement("div");
  el.className = "bubble bubble--" + role;
  el.textContent = text;
  log.appendChild(el);
  log.scrollTop = log.scrollHeight;
}

form.addEventListener("submit", async (e) => {
  e.preventDefault();
  const message = input.value.trim();
  if (!message) return;
  add("user", message);
  input.value = "";
  try {
    const res = await fetch("/api/chat", {
      method: "POST",
      headers: { "content-type": "application/json" },
      body: JSON.stringify({ message }),
    });
    const data = await res.json();
    add("bot", data.answer ?? "(응답 없음)");
  } catch {
    add("bot", "오류가 발생했습니다.");
  }
});
",
  "public/index.html": "<!doctype html>
<html lang="ko">
<head>
  <meta charset="utf-8" />
  <meta name="viewport" content="width=device-width, initial-scale=1" />
  <title>내부 규정봇</title>
  <link rel="stylesheet" href="/styles.css" />
</head>
<body>
  <main class="chat" role="main" aria-label="챗봇 대화">
    <header class="chat__header">내부 규정봇</header>
    <div id="log" class="chat__log" aria-live="polite"></div>
    <form id="form" class="chat__form">
      <label for="msg" class="sr-only">메시지 입력</label>
      <input id="msg" name="msg" class="chat__input" placeholder="무엇을 도와드릴까요?" autocomplete="off" />
      <button type="submit" class="chat__send">전송</button>
    </form>
  </main>
  <script src="/app.js" type="module"></script>
</body>
</html>
",
  "public/styles.css": ":root {
  --color-primary: #1F4E8C;
  --color-secondary: #3A6EA5;
  --color-accent: #1B998B;
  --color-background: #FFFFFF;
  --color-surface: #F5F7FA;
  --color-text: #1A1A1A;
  --color-muted: #6B7280;
  --color-border: #E5E7EB;
  --font-heading: 'Pretendard', system-ui, sans-serif;
  --font-body: 'Pretendard', system-ui, sans-serif;
  --bubble-radius: 12px;
}

* { box-sizing: border-box; }
body { margin: 0; font-family: var(--font-body); color: var(--color-text); background: var(--color-background); }
.sr-only { position: absolute; width: 1px; height: 1px; overflow: hidden; clip: rect(0 0 0 0); }

/* 레이아웃: full-page */
.chat { max-width: 480px; margin: 0 auto; height: 100vh; }
.chat { display: flex; flex-direction: column; background: var(--color-background); }
.chat__header { font-family: var(--font-heading); font-weight: 700; padding: 16px; background: var(--color-primary); color: #fff; }
.chat__log { flex: 1; overflow-y: auto; padding: 16px; display: flex; flex-direction: column; gap: 8px; background: var(--color-surface); }
.bubble { max-width: 80%; padding: 10px 14px; border-radius: var(--bubble-radius); line-height: 1.5; }
.bubble--user { align-self: flex-end; background: var(--color-primary); color: #fff; }
.bubble--bot { align-self: flex-start; background: #fff; border: 1px solid var(--color-border); }
.chat__form { display: flex; gap: 8px; padding: 12px; border-top: 1px solid var(--color-border); }
.chat__input { flex: 1; padding: 10px 12px; border: 1px solid var(--color-border); border-radius: 8px; font: inherit; }
.chat__send { padding: 10px 16px; border: none; border-radius: 8px; background: var(--color-accent); color: #fff; cursor: pointer; }
.chat__send:focus-visible, .chat__input:focus-visible { outline: 2px solid var(--color-primary); outline-offset: 2px; }
",
  "src/chat.ts": "// 채팅 오케스트레이션 골격: (RAG 검색) → LLM 호출.
// 동작: rag-cited.
// 응답 스트리밍: 사용(속도 normal, 인디케이터 dots) — SSE 또는 ReadableStream 으로 토큰 전송.
// 렌더링: 마크다운 true · 인용 "chips" · 도구호출 "collapsed".
// 출력: 길이 "balanced" · 구조 "none".
// 에이전트 능력: (없음).
// 컨텍스트: 압축 안 함.
// 안전: 거절 "polite".
import { search } from "./rag/pipeline.js";
import { complete } from "./llm/client.js";

const GROUNDED_ONLY = true; // 근거 기반 답변 강제
// 테스트/오프라인 환경: LLM_STUB=true 면 실제 LLM 호출 없이 결정적 스텁 응답을 쓴다.
const STUB = process.env.LLM_STUB === "true";

export async function answer(message: string): Promise<{ answer: string; sources: string[] }> {
  const contexts = await search(message); // TODO: 검색 결과로 컨텍스트 구성
  // 출처 표기(citations=true): sources 를 답변과 함께 노출한다.
  const system = buildSystemPrompt(contexts);
  const text = STUB ? stubAnswer(message, contexts) : await complete(system, message);
  const safe = text;
  return { answer: safe, sources: contexts };
}

function stubAnswer(message: string, contexts: string[]): string {
  // 결정적 스텁 — 골든셋 플러밍 테스트용. 실제 동작은 complete() 가 담당한다.
  const cite = contexts.length ? " (참고: " + contexts.join(", ") + ")" : "";
  return '[STUB] "' + message + '" 문의에 대한 안내입니다.' + cite;
}

function buildSystemPrompt(contexts: string[]): string {
  // TODO: agent-spec.json 의 conversation.persona.systemPrompt 를 반영한다.
  return [
    "당신은 OO부의 안내 챗봇입니다.",
    "톤: concise. 한국어로 정중히 답합니다.",
    GROUNDED_ONLY ? "제공된 근거에 없는 내용은 추측하지 마세요." : "",
    contexts.length ? "참고 자료:\\n" + contexts.join("\\n---\\n") : "",
  ]
    .filter(Boolean)
    .join("\\n");
}
",
  "src/llm/client.ts": "// LLM 클라이언트 — OpenAI 호환 엔드포인트(프록시/사내 추론). (LLM_BASE_URL)
const BASE_URL = process.env.LLM_BASE_URL ?? "http://localhost:8000/v1";
const MODEL = process.env.LLM_MODEL ?? "exaone-3.5";

export async function complete(system: string, user: string): Promise<string> {
  const res = await fetch(\`\${BASE_URL}/chat/completions\`, {
    method: "POST",
    headers: { "content-type": "application/json" },
    body: JSON.stringify({
      model: MODEL,
      max_tokens: 2048,
      temperature: 0.3,
      messages: [
        { role: "system", content: system },
        { role: "user", content: user },
      ],
    }),
  });
  const data = await res.json();
  return data?.choices?.[0]?.message?.content ?? "";
}
",
  "src/rag/pipeline.ts": "// RAG 파이프라인 골격 — 적재→청킹→임베딩→검색. (시그니처만; 로직은 PROMPT.md 지시로 채움)
// Vector DB: qdrant / 임베딩: bge-m3 / 검색: hybrid

export interface Chunk { id: string; text: string; source: string; page?: number; }

/** 1) 문서 적재 (소스: upload-hwp, upload-docx) */
export async function ingest(_filePath: string): Promise<string> {
  throw new Error("TODO: 문서 적재 구현");
}

/** 2) 청킹 (전략: paragraph) */
export function chunk(_text: string): Chunk[] {
  throw new Error("TODO: 청킹 구현");
}

/** 3) 임베딩 + Vector DB 적재 */
export async function index(_chunks: Chunk[]): Promise<void> {
  throw new Error("TODO: 임베딩/적재 구현");
}

/** 4) 검색 (hybrid) — 질문과 관련된 컨텍스트 텍스트 반환 */
export async function search(_query: string): Promise<string[]> {
  // TODO: qdrant 에서 top-k 검색
  console.warn("[rag] search() 미구현 — 빈 컨텍스트 반환. qdrant 연결을 구현하세요.");
  return [];
}
",
  "src/server.ts": "// 진입점 — 헬스체크 + 채팅 API 골격. (PROMPT.md 지시에 따라 로직을 채운다)
import express from "express";
import { answer } from "./chat.js";

const app = express();
app.use(express.json());
app.use(express.static("public"));

// 감사 로그 미들웨어 (audit=true) — TODO: 보관소/포맷을 기관 정책에 맞게 (개인정보 주의)
app.use((req, _res, next) => {
  console.log(JSON.stringify({ ts: new Date().toISOString(), method: req.method, path: req.path }));
  next();
});

// 헬스체크 (acceptance: 200 반환)
app.get("/health", (_req, res) => res.json({ status: "ok" }));

// 채팅: 사용자 질문 → (RAG 검색) → LLM 답변
app.post("/api/chat", async (req, res) => {
  const { message } = req.body ?? {};
  if (typeof message !== "string" || !message.trim()) {
    res.status(400).json({ error: "message 가 필요합니다." });
    return;
  }
  try {
    const result = await answer(message);
    res.json(result);
  } catch {
    res.status(500).json({ error: "처리 중 오류가 발생했습니다." });
  }
});

const port = Number(process.env.PORT ?? 3000);
app.listen(port, () => console.log(\`server on :\${port}\`));
",
  "tests/golden.test.ts": "// 평가 골든셋 테스트 골격. (acceptance: 통과해야 납품 가능)
// 지표: (미선택)
// 실행: LLM_STUB=true 로 플러밍을 먼저 검증하고, 구현 완료 후 실제 LLM 으로 재검증한다.
import { describe, it, expect } from "vitest";
import { answer } from "../src/chat.js";

const GOLDEN: Array<{ question: string; expectedSource: string | null }> = [
  { question: "(골든셋이 비어 있음 — agent-spec.json 의 evaluation.testset 을 채운다)", expectedSource: null },
];

describe("골든셋 — 플러밍(LLM_STUB=true)", () => {
  for (const tc of GOLDEN) {
    it(tc.question, async () => {
      const res = await answer(tc.question);
      expect(typeof res.answer).toBe("string");
      expect(res.answer.length).toBeGreaterThan(0);
    });
  }
});
",
  "tsconfig.json": "{
  "compilerOptions": {
    "target": "ES2022",
    "module": "ES2022",
    "moduleResolution": "bundler",
    "strict": true,
    "esModuleInterop": true,
    "skipLibCheck": true,
    "outDir": "dist",
    "rootDir": "src"
  },
  "include": ["src"]
}
",
}
`;

exports[`골든 산출물 스냅샷 > cloud 프로필 전체 산출 스냅샷 1`] = `
{
  ".env.example": "# 자동 생성된 환경변수 목록 — 실제 값으로 채운다
PORT=3000
# 테스트/오프라인: true 면 LLM 호출 없이 스텁 응답 사용
LLM_STUB=false
ANTHROPIC_API_KEY=
LLM_MODEL=claude-sonnet-4-6
DATABASE_URL=
EMBEDDING_MODEL=bge-m3
# 온프레미스 임베딩은 API 가 아니라 추론 서버가 필요하다 (ARCHITECTURE.md)
EMBEDDING_API_URL=http://localhost:8080/embed
",
  ".gitignore": "node_modules/
dist/
.env
*.log
",
  "ARCHITECTURE.md": "# 아키텍처 (ARCHITECTURE.md)

## 전체 구성

- **프론트엔드**: Next.js (독립 페이지)
- **백엔드**: Node.js / 인증 세션 / 네트워크 외부 인터넷 허용
- **배포**: Docker 컨테이너 (공공 클라우드(G-Cloud 등))
- **데이터**: RDB PostgreSQL / 파일 로컬 파일시스템

## RAG 파이프라인

\`\`\`
[지식 소스: PDF 업로드, HWP(한글) 업로드]
   │ 적재 (OCR 아니오 / 표 아니오)
   ▼
[청킹: 문단 단위]
   ▼
[임베딩: bge-m3] ──▶ [Vector DB: pgvector]
   ▼
[검색: 하이브리드(BM25+벡터)]
   ▼
[LLM: Claude Sonnet 4.6] ──▶ 답변 (+출처 표기)
\`\`\`

> 임베딩 \`bge-m3\`은 클라우드 API가 아니라 **추론 서버**가 필요하다. 별도 컨테이너/서버로 띄우고 \`EMBEDDING_API_URL\`로 연결한다. 폐쇄망에서는 오프라인 설치 패키지에 모델 가중치를 포함한다.


## 보안 · 컴플라이언스

- 데이터 국내 보관: 예
- 망분리 준수: 아니오
- 감사 로그: 예
- 접근성: KWCAG 2.2 AA

## 운영

- 멀티턴 세션: 예
- 관리자 대시보드: 아니오
",
  "CLAUDE.md": "# CLAUDE.md — OO시 민원봇 작업 지침

> 이 파일은 **이 챗봇 프로젝트에서 작업하는 Claude Code를 위한 지침**이다.
> 구현 착수 지시는 \`PROMPT.md\`, 전체 설정 정본은 \`agent-spec.json\`을 본다.

## 1. 프로젝트 개요

- 기관: OO광역시 / 챗봇: OO시 민원봇
- 용도: 민원 안내, FAQ
- 배포 환경: 공공 클라우드(G-Cloud 등)

## 2. 절대 규칙 (공공기관)

- **배포 환경**: 공공 클라우드(G-Cloud 등)
- **웹 접근성**: KWCAG 2.2 AA 준수 (KWCAG 2.2)
- **개인정보**: 수집 아니오, 마스킹 예
- **데이터 국내 보관**: 예

## 3. 스택

- 프론트엔드: Next.js / 임베드: 독립 페이지
- 백엔드: Node.js / 인증: 세션 / 배포: Docker 컨테이너
- DB: PostgreSQL / 파일저장소: 로컬 파일시스템
- LLM: Claude (Anthropic) · Claude Sonnet 4.6 · 공식 API
- RAG: pgvector + 임베딩 bge-m3 + 검색 하이브리드(BM25+벡터)

## 4. 작업 원칙

- \`agent-spec.json\`이 단일 진실. 설정과 코드가 어긋나면 spec을 따른다.
- 답변은 공손/격식 톤. 근거 없는 내용은 답하지 않는다(환각 억제). 답변에 출처/페이지를 표기한다.
- 모르는 질문은 "상담사 연결"로 처리한다.
- 모든 사용자 대면 텍스트는 한국어, 접근성(KWCAG 2.2 AA)을 지킨다.

## 5. 검증

- 빌드/기동(\`/health\`) 후 \`tests/\`의 평가 골든셋을 돌려 통과를 확인한다.
",
  "DESIGN.md": "# 디자인 시스템 (DESIGN.md)

> "OO시 민원봇"의 시각 결정을 텍스트로 고정한 문서. UI 구현은 이 토큰을 따른다.
> 색은 **직접 hex가 아니라 CSS 변수**로 사용한다.

## 테마

- **프리셋**: 신뢰 블루
- **모드**: 라이트
- **레이아웃**: 우하단 플로팅 위젯

## 컬러 토큰

| 토큰 | 값 | 용도 |
|---|---|---|
| \`--color-primary\` | \`#1F4E8C\` | 주요 액션·강조 |
| \`--color-secondary\` | \`#3A6EA5\` | 보조 |
| \`--color-accent\` | \`#1B998B\` | 포인트 |
| \`--color-background\` | \`#FFFFFF\` | 배경 |
| \`--color-surface\` | \`#F5F7FA\` | 카드/말풍선 표면 |
| \`--color-text\` | \`#1A1A1A\` | 본문 텍스트 |
| \`--color-muted\` | \`#6B7280\` | 보조 텍스트 |
| \`--color-border\` | \`#E5E7EB\` | 경계선 |

## 폰트

- **제목**: Pretendard (\`--font-heading\`)
- **본문**: Pretendard (\`--font-body\`)

## 챗 위젯 스타일

- 말풍선 모서리: rounded (\`--bubble-radius\`)
- 아바타 표시: 예
- 봇 말풍선 정렬: left
- 입력창 형태: box
- 밀도: comfortable

## CSS 변수 (그대로 복사해 사용)

\`\`\`css
:root {
  --color-primary: #1F4E8C;
  --color-secondary: #3A6EA5;
  --color-accent: #1B998B;
  --color-background: #FFFFFF;
  --color-surface: #F5F7FA;
  --color-text: #1A1A1A;
  --color-muted: #6B7280;
  --color-border: #E5E7EB;
  --font-heading: 'Pretendard', system-ui, sans-serif;
  --font-body: 'Pretendard', system-ui, sans-serif;
  --bubble-radius: 12px;
}
\`\`\`

## 접근성 (KWCAG 2.2)

- 목표 등급: KWCAG 2.2 AA
- 텍스트/배경 대비, 키보드 내비게이션, \`aria-*\` 라벨, 포커스 표시를 기본값으로 한다.
",
  "Dockerfile": "FROM node:22-slim
WORKDIR /app
COPY package.json ./
RUN npm install
COPY . .
RUN npm run build
EXPOSE 3000
CMD ["npm", "start"]
",
  "PROMPT.md": "# 구현 지시 (Claude Code 마스터 프롬프트)

> 이 파일은 **Claude Code에게 주는 첫 지시**다. 이 폴더를 열고 아래를 순서대로 수행해
> **OO광역시**의 챗봇 **"OO시 민원봇"**을 완성하라.

## 0. 가장 먼저 — 공공기관 제약 (위반 금지)

- **배포 환경**: 공공 클라우드(G-Cloud 등)
- **웹 접근성**: KWCAG 2.2 AA 준수 (KWCAG 2.2)
- **개인정보**: 수집 아니오, 마스킹 예
- **데이터 국내 보관**: 예

> 위 제약과 충돌하는 구현은 하지 않는다. 충돌이 보이면 멈추고 \`agent-spec.json\`을 기준으로 재확인한다.

## 1. 무엇을 만드는가

- **기관/부서**: OO광역시 / 민원봉사과
- **챗봇 명칭**: OO시 민원봇
- **용도**: 민원 안내, FAQ
- **대상 사용자**: 일반 국민
- **운영 언어**: 한국어
- **스택**: Next.js (프론트) / Node.js (백엔드) / RAG: pgvector + bge-m3 / LLM: Claude Sonnet 4.6

## 2. 구현 순서 (이 순서를 지킨다 — 각 단계 끝에서 검증)

1. **프로젝트 골격 확인**: 이 폴더의 \`agent-spec.json\`(정본), \`DESIGN.md\`, \`ARCHITECTURE.md\`, \`CLAUDE.md\`를 먼저 읽는다. 모든 결정은 \`agent-spec.json\`을 따른다.
2. **의존성 설치 & 기동 검증**: 동봉된 매니페스트로 의존성을 설치하고, 진입점(\`/health\`)이 떠서 200을 반환하는지 확인한다. 여기서 빌드/기동이 깨지면 먼저 고친다. **테스트/오프라인 환경에서는 \`LLM_STUB=true\`로 실제 LLM 호출 없이 플러밍을 검증**하고, 실제 키(예: \`ANTHROPIC_API_KEY\`)는 \`.env\`에 둔다.
3. **디자인 토큰 적용**: \`DESIGN.md\`의 컬러/폰트/위젯 토큰을 UI에 반영한다. 색은 직접 hex가 아니라 CSS 변수로 쓴다. 레이아웃은 "우하단 플로팅 위젯".
4. **RAG 파이프라인 구현**: 적재→청킹(문단 단위)→임베딩(bge-m3)→pgvector 적재→검색(하이브리드(BM25+벡터)). 답변에는 출처/페이지를 반드시 표기한다. RAG 골격 stub(\`src/rag/pipeline.ts\`)의 함수 시그니처를 채운다. \`search()\`가 빈 결과를 그대로 반환하지 않도록 한다. HWP(한글)는 표준 Node 파서가 없으므로 변환 전략(libreoffice 변환 또는 hwp.js 등)을 먼저 정해 적재 단계에 반영한다. 임베딩 \`bge-m3\`은 API가 아니라 별도 추론 서버가 필요하다 — \`EMBEDDING_API_URL\` 엔드포인트로 연결한다(ARCHITECTURE 참조).
5. **LLM 연동**: Claude (Anthropic) / 모델 Claude Sonnet 4.6 / 호출 방식 공식 API. 시스템 프롬프트는 공손/격식 톤. 가드레일: 근거기반 예, 민감정보 필터 예.
6. **대화 설계 반영**: 페르소나/인텐트/빠른응답/폴백(상담사 연결)을 구현한다. 인텐트가 비어 있으면 \`agent-spec.json\`의 \`conversation\`을 보고 대표 시나리오를 먼저 정의한다.
7. **상호작용/동작 방식 구현**: 동작 방식은 RAG 인용형(검색→근거 기반 답변+출처). 응답 스트리밍(속도 normal, 인디케이터 dots), 렌더링: 마크다운 예·인용 "chips". 출력 형식: 길이 "balanced"·구조 "none". 대화 컨트롤: copy, feedback (피드백 thumbs).
8. **에이전트 능력/안전 구현**: 안전 — 거절 스타일 "polite". (§7 가드레일과 함께 적용)
9. **평가 골든셋 검증**: 동봉된 테스트 골격(\`tests/\`)을 실행해 \`evaluation\` 골든셋을 통과시킨다. 통과 못 하면 RAG/프롬프트를 조정한다.
10. **컴플라이언스 점검**: 접근성(KWCAG 2.2 AA), 개인정보 마스킹(아니오), 감사 로그(예)를 최종 확인한다. 동봉된 감사 로그 미들웨어·마스킹 유틸 stub을 실제 정책에 맞게 채운다.

## 3. 완료 기준 (acceptance)

- [ ] 빌드 및 서버 기동 성공 (\`/health\` 200)
- [ ] 디자인 토큰(컬러/폰트/위젯/레이아웃)이 UI에 반영됨
- [ ] RAG 검색이 동작하고 답변에 출처가 표기됨
- [ ] \`evaluation\` 골든셋 테스트 통과
- [ ] 접근성 KWCAG 2.2 AA / 개인정보·감사 로그 요건 충족

## 4. 원칙

- **\`agent-spec.json\`이 정본**이다. 모호하면 거기서 답을 찾는다. 그래도 없으면 보수적으로(공공기관 안전) 결정한다.
- 선택되지 않은 기능은 임의로 추가하지 않는다(범위 고정 → 결정적 산출).
- 한국어 사용자 기준으로 카피·오류 메시지·접근성 라벨을 작성한다.
",
  "README.md": "# OO시 민원봇

OO광역시 민원봉사과 챗봇 프로젝트.

> 이 폴더는 **agent-maker**가 생성한 산출물이다. Claude Code로 구현을 시작하려면
> 먼저 \`PROMPT.md\`를 읽게 하라.

## 무엇인가

- 용도: 민원 안내, FAQ
- 대상: 일반 국민
- 배포 환경: 공공 클라우드(G-Cloud 등)

## 구현 시작

1. 이 폴더에서 Claude Code를 연다.
2. \`PROMPT.md\`의 지시를 따른다. (정본 설정: \`agent-spec.json\`)
3. 빌드/기동 후 \`tests/\`의 평가 골든셋을 통과시킨다.

## 포함 파일

- \`PROMPT.md\` — Claude Code 구현 지시
- \`DESIGN.md\` — 디자인 시스템(토큰)
- \`ARCHITECTURE.md\` — 아키텍처
- \`CLAUDE.md\` — 이 프로젝트 작업 지침
- \`agent-spec.json\` — 전체 설정(정본)
- 스캐폴딩 코드(\`src/\`, 매니페스트, \`tests/\` 등)
",
  "agent-spec.json": "{
  "meta": {
    "specVersion": "1.0",
    "generatorVersion": "0.1.0",
    "createdAt": "2026-06-20T00:00:00.000Z"
  },
  "project": {
    "org": "OO광역시",
    "dept": "민원봉사과",
    "name": "OO시 민원봇",
    "purpose": [
      "civil-complaint",
      "faq"
    ],
    "audience": [
      "citizen"
    ],
    "languages": [
      "ko"
    ],
    "deployEnv": "gov-cloud",
    "traffic": "medium"
  },
  "design": {
    "theme": "gov-blue",
    "colors": {
      "primary": "#1F4E8C",
      "secondary": "#3A6EA5",
      "accent": "#1B998B",
      "background": "#FFFFFF",
      "surface": "#F5F7FA",
      "text": "#1A1A1A",
      "muted": "#6B7280",
      "border": "#E5E7EB"
    },
    "mode": "light",
    "fonts": {
      "heading": "pretendard",
      "body": "pretendard"
    },
    "widgetStyle": {
      "bubbleRadius": "rounded",
      "avatar": true,
      "align": "left",
      "inputStyle": "box",
      "density": "comfortable"
    },
    "layout": "floating-widget"
  },
  "frontend": {
    "framework": "nextjs",
    "embed": "standalone-page",
    "responsive": true,
    "a11yLevel": "kwcag-aa"
  },
  "backend": {
    "runtime": "node",
    "auth": "session",
    "deploy": "docker",
    "network": "internet-allowed",
    "logging": {
      "audit": true
    }
  },
  "database": {
    "rdb": "postgres",
    "history": "same-as-rdb",
    "fileStore": "local"
  },
  "rag": {
    "enabled": true,
    "sources": [
      "upload-pdf",
      "upload-hwp"
    ],
    "ingest": {
      "ocr": false,
      "tables": false,
      "images": false
    },
    "chunking": {
      "strategy": "paragraph"
    },
    "embedding": "bge-m3",
    "vectorDb": "pgvector",
    "retrieval": {
      "strategy": "hybrid"
    },
    "citations": true
  },
  "llm": {
    "provider": "claude",
    "model": "claude-sonnet-4-6",
    "serving": "official-api",
    "params": {
      "temperature": 0.3,
      "maxTokens": 2048
    },
    "guardrails": {
      "groundedOnly": true,
      "piiFilter": true
    },
    "session": {
      "multiTurn": true
    }
  },
  "conversation": {
    "persona": {
      "tone": "formal",
      "speaker": "OO시 안내"
    },
    "intents": [
      {
        "name": "증명서 발급 안내",
        "examples": [
          "주민등록등본 어떻게 떼나요?"
        ]
      }
    ],
    "fallback": {
      "onUnknown": "handoff",
      "handoff": "human-agent"
    }
  },
  "interaction": {
    "agentMode": "rag-cited",
    "toolPolicy": "none",
    "streaming": {
      "enabled": true,
      "speed": "normal",
      "indicator": "dots"
    },
    "rendering": {
      "markdown": true,
      "codeBlocks": true,
      "citationStyle": "chips",
      "toolCallDisplay": "collapsed",
      "showContextMeter": false
    },
    "output": {
      "length": "balanced",
      "structured": "none"
    },
    "welcome": {
      "showSuggestions": true
    },
    "controls": [
      "copy",
      "feedback"
    ],
    "feedback": "thumbs",
    "multimodal": []
  },
  "agent": {
    "askUser": false,
    "subAgents": {
      "enabled": false
    },
    "builtinTools": [],
    "memory": {
      "longTerm": false
    },
    "context": {
      "autoCompact": false,
      "strategy": "none"
    },
    "safety": {
      "refusalStyle": "polite",
      "abuseFilter": false
    }
  },
  "integrations": {
    "apis": [],
    "tools": [],
    "webhooks": []
  },
  "evaluation": {
    "testset": [
      {
        "question": "주민등록등본 발급 방법은?",
        "expectedSource": "민원편람.pdf"
      },
      {
        "question": "운영 시간은 어떻게 되나요?"
      }
    ],
    "metrics": [
      "retrieval-hit",
      "citation-accuracy"
    ]
  },
  "compliance": {
    "privacy": {
      "collectsPii": false,
      "masking": true
    },
    "security": {
      "dataResidencyKR": true,
      "networkSeparation": false
    },
    "a11y": "kwcag-aa"
  },
  "ops": {
    "audit": true
  }
}
",
  "package.json": "{
  "name": "oo",
  "version": "0.1.0",
  "private": true,
  "type": "module",
  "scripts": {
    "dev": "tsx watch src/server.ts",
    "build": "tsc",
    "start": "node dist/server.js",
    "test": "vitest run"
  },
  "dependencies": {
    "express": "^4.21.2",
    "@anthropic-ai/sdk": "^0.32.1"
  },
  "devDependencies": {
    "typescript": "^5.7.3",
    "tsx": "^4.19.2",
    "vitest": "^2.1.8",
    "@types/express": "^4.17.21",
    "@types/node": "^22.10.5"
  }
}
",
  "public/app.js": "// 최소 채팅 UI — /api/chat 호출. (PROMPT.md 지시로 디자인/접근성을 다듬는다)
const form = document.getElementById("form");
const log = document.getElementById("log");
const input = document.getElementById("msg");

function add(role, text) {
  const el = document.createElement("div");
  el.className = "bubble bubble--" + role;
  el.textContent = text;
  log.appendChild(el);
  log.scrollTop = log.scrollHeight;
}

form.addEventListener("submit", async (e) => {
  e.preventDefault();
  const message = input.value.trim();
  if (!message) return;
  add("user", message);
  input.value = "";
  try {
    const res = await fetch("/api/chat", {
      method: "POST",
      headers: { "content-type": "application/json" },
      body: JSON.stringify({ message }),
    });
    const data = await res.json();
    add("bot", data.answer ?? "(응답 없음)");
  } catch {
    add("bot", "오류가 발생했습니다.");
  }
});
",
  "public/index.html": "<!doctype html>
<html lang="ko">
<head>
  <meta charset="utf-8" />
  <meta name="viewport" content="width=device-width, initial-scale=1" />
  <title>OO시 민원봇</title>
  <link rel="stylesheet" href="/styles.css" />
</head>
<body>
  <main class="chat" role="main" aria-label="챗봇 대화">
    <header class="chat__header">OO시 민원봇</header>
    <div id="log" class="chat__log" aria-live="polite"></div>
    <form id="form" class="chat__form">
      <label for="msg" class="sr-only">메시지 입력</label>
      <input id="msg" name="msg" class="chat__input" placeholder="무엇을 도와드릴까요?" autocomplete="off" />
      <button type="submit" class="chat__send">전송</button>
    </form>
  </main>
  <script src="/app.js" type="module"></script>
</body>
</html>
",
  "public/styles.css": ":root {
  --color-primary: #1F4E8C;
  --color-secondary: #3A6EA5;
  --color-accent: #1B998B;
  --color-background: #FFFFFF;
  --color-surface: #F5F7FA;
  --color-text: #1A1A1A;
  --color-muted: #6B7280;
  --color-border: #E5E7EB;
  --font-heading: 'Pretendard', system-ui, sans-serif;
  --font-body: 'Pretendard', system-ui, sans-serif;
  --bubble-radius: 12px;
}

* { box-sizing: border-box; }
body { margin: 0; font-family: var(--font-body); color: var(--color-text); background: var(--color-background); }
.sr-only { position: absolute; width: 1px; height: 1px; overflow: hidden; clip: rect(0 0 0 0); }

/* 레이아웃: floating-widget */
.chat { position: fixed; bottom: 24px; right: 24px; width: 360px; height: 520px; max-height: 80vh; box-shadow: 0 8px 30px rgba(0,0,0,.18); border-radius: 16px; overflow: hidden; }
.chat { display: flex; flex-direction: column; background: var(--color-background); }
.chat__header { font-family: var(--font-heading); font-weight: 700; padding: 16px; background: var(--color-primary); color: #fff; }
.chat__log { flex: 1; overflow-y: auto; padding: 16px; display: flex; flex-direction: column; gap: 8px; background: var(--color-surface); }
.bubble { max-width: 80%; padding: 10px 14px; border-radius: var(--bubble-radius); line-height: 1.5; }
.bubble--user { align-self: flex-end; background: var(--color-primary); color: #fff; }
.bubble--bot { align-self: flex-start; background: #fff; border: 1px solid var(--color-border); }
.chat__form { display: flex; gap: 8px; padding: 12px; border-top: 1px solid var(--color-border); }
.chat__input { flex: 1; padding: 10px 12px; border: 1px solid var(--color-border); border-radius: 8px; font: inherit; }
.chat__send { padding: 10px 16px; border: none; border-radius: 8px; background: var(--color-accent); color: #fff; cursor: pointer; }
.chat__send:focus-visible, .chat__input:focus-visible { outline: 2px solid var(--color-primary); outline-offset: 2px; }
",
  "src/chat.ts": "// 채팅 오케스트레이션 골격: (RAG 검색) → LLM 호출.
// 동작: rag-cited.
// 응답 스트리밍: 사용(속도 normal, 인디케이터 dots) — SSE 또는 ReadableStream 으로 토큰 전송.
// 렌더링: 마크다운 true · 인용 "chips" · 도구호출 "collapsed".
// 출력: 길이 "balanced" · 구조 "none".
// 에이전트 능력: (없음).
// 컨텍스트: 압축 안 함.
// 안전: 거절 "polite".
import { search } from "./rag/pipeline.js";
import { complete } from "./llm/client.js";

const GROUNDED_ONLY = true; // 근거 기반 답변 강제
// 테스트/오프라인 환경: LLM_STUB=true 면 실제 LLM 호출 없이 결정적 스텁 응답을 쓴다.
const STUB = process.env.LLM_STUB === "true";

export async function answer(message: string): Promise<{ answer: string; sources: string[] }> {
  const contexts = await search(message); // TODO: 검색 결과로 컨텍스트 구성
  // 출처 표기(citations=true): sources 를 답변과 함께 노출한다.
  const system = buildSystemPrompt(contexts);
  const text = STUB ? stubAnswer(message, contexts) : await complete(system, message);
  const safe = text;
  return { answer: safe, sources: contexts };
}

function stubAnswer(message: string, contexts: string[]): string {
  // 결정적 스텁 — 골든셋 플러밍 테스트용. 실제 동작은 complete() 가 담당한다.
  const cite = contexts.length ? " (참고: " + contexts.join(", ") + ")" : "";
  return '[STUB] "' + message + '" 문의에 대한 안내입니다.' + cite;
}

function buildSystemPrompt(contexts: string[]): string {
  // TODO: agent-spec.json 의 conversation.persona.systemPrompt 를 반영한다.
  return [
    "당신은 OO광역시의 안내 챗봇입니다.",
    "톤: formal. 한국어로 정중히 답합니다.",
    GROUNDED_ONLY ? "제공된 근거에 없는 내용은 추측하지 마세요." : "",
    contexts.length ? "참고 자료:\\n" + contexts.join("\\n---\\n") : "",
  ]
    .filter(Boolean)
    .join("\\n");
}
",
  "src/llm/client.ts": "// LLM 클라이언트 — Claude 공식 API. (키: ANTHROPIC_API_KEY)
import Anthropic from "@anthropic-ai/sdk";

const MODEL = process.env.LLM_MODEL ?? "claude-sonnet-4-6";

// 지연 초기화 — 키가 없어도 서버(/health)는 기동되도록 한다.
let _client: Anthropic | null = null;
function client(): Anthropic {
  if (!_client) _client = new Anthropic();
  return _client;
}

export async function complete(system: string, user: string): Promise<string> {
  const res = await client().messages.create({
    model: MODEL,
    max_tokens: 2048,
    temperature: 0.3,
    system,
    messages: [{ role: "user", content: user }],
  });
  const block = res.content[0];
  return block && block.type === "text" ? block.text : "";
}
",
  "src/rag/pipeline.ts": "// RAG 파이프라인 골격 — 적재→청킹→임베딩→검색. (시그니처만; 로직은 PROMPT.md 지시로 채움)
// Vector DB: pgvector / 임베딩: bge-m3 / 검색: hybrid

export interface Chunk { id: string; text: string; source: string; page?: number; }

/** 1) 문서 적재 (소스: upload-pdf, upload-hwp) */
export async function ingest(_filePath: string): Promise<string> {
  throw new Error("TODO: 문서 적재 구현");
}

/** 2) 청킹 (전략: paragraph) */
export function chunk(_text: string): Chunk[] {
  throw new Error("TODO: 청킹 구현");
}

/** 3) 임베딩 + Vector DB 적재 */
export async function index(_chunks: Chunk[]): Promise<void> {
  throw new Error("TODO: 임베딩/적재 구현");
}

/** 4) 검색 (hybrid) — 질문과 관련된 컨텍스트 텍스트 반환 */
export async function search(_query: string): Promise<string[]> {
  // TODO: pgvector 에서 top-k 검색
  console.warn("[rag] search() 미구현 — 빈 컨텍스트 반환. pgvector 연결을 구현하세요.");
  return [];
}
",
  "src/server.ts": "// 진입점 — 헬스체크 + 채팅 API 골격. (PROMPT.md 지시에 따라 로직을 채운다)
import express from "express";
import { answer } from "./chat.js";

const app = express();
app.use(express.json());
app.use(express.static("public"));

// 감사 로그 미들웨어 (audit=true) — TODO: 보관소/포맷을 기관 정책에 맞게 (개인정보 주의)
app.use((req, _res, next) => {
  console.log(JSON.stringify({ ts: new Date().toISOString(), method: req.method, path: req.path }));
  next();
});

// 헬스체크 (acceptance: 200 반환)
app.get("/health", (_req, res) => res.json({ status: "ok" }));

// 채팅: 사용자 질문 → (RAG 검색) → LLM 답변
app.post("/api/chat", async (req, res) => {
  const { message } = req.body ?? {};
  if (typeof message !== "string" || !message.trim()) {
    res.status(400).json({ error: "message 가 필요합니다." });
    return;
  }
  try {
    const result = await answer(message);
    res.json(result);
  } catch {
    res.status(500).json({ error: "처리 중 오류가 발생했습니다." });
  }
});

const port = Number(process.env.PORT ?? 3000);
app.listen(port, () => console.log(\`server on :\${port}\`));
",
  "tests/golden.test.ts": "// 평가 골든셋 테스트 골격. (acceptance: 통과해야 납품 가능)
// 지표: retrieval-hit, citation-accuracy
// 실행: LLM_STUB=true 로 플러밍을 먼저 검증하고, 구현 완료 후 실제 LLM 으로 재검증한다.
import { describe, it, expect } from "vitest";
import { answer } from "../src/chat.js";

const GOLDEN: Array<{ question: string; expectedSource: string | null }> = [
  { question: "주민등록등본 발급 방법은?", expectedSource: "민원편람.pdf" },
  { question: "운영 시간은 어떻게 되나요?", expectedSource: null },
];

describe("골든셋 — 플러밍(LLM_STUB=true)", () => {
  for (const tc of GOLDEN) {
    it(tc.question, async () => {
      const res = await answer(tc.question);
      expect(typeof res.answer).toBe("string");
      expect(res.answer.length).toBeGreaterThan(0);
    });
  }
});

// 구현 완료 후 활성화할 실제 합격 기준(인용/근거 정확도).
describe("골든셋 — 근거 정확도(구현 후)", () => {
  for (const tc of GOLDEN.filter((t) => t.expectedSource)) {
    it.todo(\`출처 포함: \${tc.question} → \${tc.expectedSource}\`);
  }
});
",
  "tsconfig.json": "{
  "compilerOptions": {
    "target": "ES2022",
    "module": "ES2022",
    "moduleResolution": "bundler",
    "strict": true,
    "esModuleInterop": true,
    "skipLibCheck": true,
    "outDir": "dist",
    "rootDir": "src"
  },
  "include": ["src"]
}
",
}
`;
